header, footer met nieuwste versie van NL template
Header en footer hebben nu een link naar onze brands pagina, tekst is aangepast voor de NL template

--- a/nlversion.html
+++ b/nlversion.html
@@ -1,22 +1,23 @@
+<!--NL Version 2.0-->
 <html style="overflow-y: hidden;">
 <head>
 	<title></title>
 </head>
-<body style="height: auto; min-height: auto;"><span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">Beste klant,</span></span><br />
+<body style="height: auto; min-height: auto;">
+<p><br />
+<span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span style="color:#000000;"><span lang="NL" style="font-family:Barlow">Beste klant,</span><br />
 <br />
-<span lang="NL" style="font-family:&quot;Barlow Light&quot;">Hartelijk dank voor uw bericht.<br />
+<span lang="NL" style="font-family:Barlow Light">Hartelijk dank voor uw bericht.<br />
 Ons supportteam zal uw vraag analyseren en u zo spoedig mogelijk antwoorden.<br />
 <br />
-Uw bericht op {{{Case.CreatedDate}}} heeft het volgende <span style="color:#065e8b">referentienummer </span>gekregen: {{{Case.CaseNumber}}}<br />
-Graag dit nummer gebruiken als u nog meer vragen heeft met betrekking tot uw mail.<br />
+Uw bericht op&nbsp;{{{Case.CreatedDate}}} heeft het volgende referentienummer gekregen:&nbsp;{{{Case.CaseNumber}}}.<br />
+Met onderwerp: {{{Case.Subject}}}.&nbsp;<br />
+Graag dit nummer gebruiken als u meer vragen heeft.<br />
 <br />
-Voor meer vragen, kunt u ons <span style="color:#065e8b">mailen</span> op: nl-sales@doreleurope.com<br />
-Vergeet niet uw referentienummer erin te zetten, als u nog aanvullende informatie heeft op uw gestelde bericht.<br />
+We wensen u een hele fijne dag en nogmaals dank voor uw keuze voor Dorel Juvenile!</span></span><br />
 <br />
-<span style="color:#065e8b">We wensen u een hele fijne dag </span>en nogmaals dank voor uw keuze voor Dorel Juvenile!<br />
+<em><span style="color:#000000;"><span lang="NL" style="font-family:Barlow">Ga naar </span></span><a href="https://doreljuvenile.com/nl-nl/our-brands" style="color:#0563c1; text-decoration:underline"><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">https://doreljuvenile.com/nl-nl/our-brands</span></span></a><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">&nbsp;</span>voor meer informatie!</span></em><br />
 <br />
-<br />
-Let op! Dit is een automatisch gegenereerd bericht, en kan niet worden beantwoord.</span></span></span></span><br />
-<br />
-<span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">Ga naar <a href="https://doreljuvenile.com/nl-nl/" style="color:#0563c1; text-decoration:underline"><span style="color:#065e8b">https://doreljuvenile.com/nl-nl/</span></a> voor meer informatie!</span></span></span></span></span></body>
+<span style="color:#000000;"><span lang="NL" style="font-family:&quot;Barlow Light&quot;"><u><strong>Let op! Dit is een automatisch gegenereerd bericht, en kan niet worden beantwoord.</strong></u></span></span></span></span></span></p>
+</body>
 </html>
