link aangepast, header en footers met links
meer headers en footers gemaakt met links naar websites van hun taal, ook een backup zonder links.
link naar de doreljuvenile website zelf ook aangepast, https weggehaald voor user, nogsteeds clickable en je kunt zien dat het een link is

--- a/header_footer.html
+++ b/header_footer.html
@@ -1,8 +1,44 @@
-<!-- Header with Dorel Juvenile brands link -->
+<!-- Header with Dorel Juvenile WITHOUT link -->
+<img alt="Dorel Juvenile Header" src="https://dje--c.eu39.content.force.com/file-asset-public/HEAD?oid=00D24000000ivSi" style="max-width: 1095.px" title="Header" />
+<!-- Header with Dorel Juvenile WITHOUT link -->
+<img alt="Dorel Juvenile Footer" src="https://dje--c.eu39.content.force.com/file-asset-public/FOOT?oid=00D24000000ivSi" style="max-width: 1095px" title="Footer" />
+<!-- Header with Dorel Juvenile brands NL link -->
 <a href="https://doreljuvenile.com/nl-nl/our-brands">
-    <img alt="Dorel Juvenile Header" src="https://dje--c.eu39.content.force.com/file-asset-public/HEAD?oid=00D24000000ivSi" style="max-width: 1095.03828125px" title="Header" />
+    <img alt="Dorel Juvenile Header" src="https://dje--c.eu39.content.force.com/file-asset-public/HEAD?oid=00D24000000ivSi" style="max-width: 1095px" title="Header" />
 </a>
-<!-- Footer with Dorel Juvenile brands link -->
+<!-- Footer with Dorel Juvenile brands  NL link -->
 <a href="https://doreljuvenile.com/nl-nl/our-brands">
-    <img alt="Dorel Juvenile Footer" src="https://dje--c.eu39.content.force.com/file-asset-public/FOOT?oid=00D24000000ivSi" style="max-width: 1095.03828125px" title="Footer" />
+    <img alt="Dorel Juvenile Footer" src="https://dje--c.eu39.content.force.com/file-asset-public/FOOT?oid=00D24000000ivSi" style="max-width: 1095px" title="Footer" />
+</a>
+<!-- Header with Dorel Juvenile brands EN link -->
+<a href="https://doreljuvenile.com/our-brands">
+    <img alt="Dorel Juvenile Header" src="https://dje--c.eu39.content.force.com/file-asset-public/HEAD?oid=00D24000000ivSi" style="max-width: 1095px" title="Header" />
+</a>
+<!-- Footer with Dorel Juvenile brands  EN link -->
+<a href="https://doreljuvenile.com/our-brands">
+    <img alt="Dorel Juvenile Footer" src="https://dje--c.eu39.content.force.com/file-asset-public/FOOT?oid=00D24000000ivSi" style="max-width: 1095px" title="Footer" />
+</a>
+<!-- Header with Dorel Juvenile brands ES link -->
+<a href="https://doreljuvenile.com/es-es/our-brands">
+    <img alt="Dorel Juvenile Header" src="https://dje--c.eu39.content.force.com/file-asset-public/HEAD?oid=00D24000000ivSi" style="max-width: 1095px" title="Header" />
+</a>
+<!-- Footer with Dorel Juvenile brands  ES link -->
+<a href="https://doreljuvenile.com/es-es/our-brands">
+    <img alt="Dorel Juvenile Footer" src="https://dje--c.eu39.content.force.com/file-asset-public/FOOT?oid=00D24000000ivSi" style="max-width: 1095px" title="Footer" />
+</a>
+<!-- Header with Dorel Juvenile brands FR link -->
+<a href="https://doreljuvenile.com/fr-fr/our-brands">
+    <img alt="Dorel Juvenile Header" src="https://dje--c.eu39.content.force.com/file-asset-public/HEAD?oid=00D24000000ivSi" style="max-width: 1095px" title="Header" />
+</a>
+<!-- Footer with Dorel Juvenile brands  FR link -->
+<a href="https://doreljuvenile.com/fr-fr/our-brands">
+    <img alt="Dorel Juvenile Footer" src="https://dje--c.eu39.content.force.com/file-asset-public/FOOT?oid=00D24000000ivSi" style="max-width: 1095px" title="Footer" />
+</a>
+<!-- Header with Dorel Juvenile brands PT_BR link -->
+<a href="https://doreljuvenile.com/pt-br/our-brands">
+    <img alt="Dorel Juvenile Header" src="https://dje--c.eu39.content.force.com/file-asset-public/HEAD?oid=00D24000000ivSi" style="max-width: 1095px" title="Header" />
+</a>
+<!-- Footer with Dorel Juvenile brands  PT_BR link -->
+<a href="https://doreljuvenile.com/pt-br/our-brands">
+    <img alt="Dorel Juvenile Footer" src="https://dje--c.eu39.content.force.com/file-asset-public/FOOT?oid=00D24000000ivSi" style="max-width: 1095px" title="Footer" />
 </a>
