--- a/nlversion.html
+++ b/nlversion.html
@@ -5,7 +5,7 @@
 </head>
 <body style="height: auto; min-height: auto;">
 <p><br />
-<span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span style="color:#000000;"><span lang="NL" style="font-family:Barlow">Beste klant,</span><br />
+<span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span><span lang="NL" style="font-family:Barlow">Beste klant,</span><br />
 <br />
 <span lang="NL" style="font-family:Barlow Light">Hartelijk dank voor uw bericht.<br />
 Ons supportteam zal uw vraag analyseren en u zo spoedig mogelijk antwoorden.<br />
@@ -16,8 +16,8 @@ Graag dit nummer gebruiken als u meer vragen heeft.<br />
 <br />
 We wensen u een hele fijne dag en nogmaals dank voor uw keuze voor Dorel Juvenile!</span></span><br />
 <br />
-<em><span style="color:#000000;"><span lang="NL" style="font-family:Barlow">Ga naar </span></span><a href="https://doreljuvenile.com/nl-nl/our-brands" style="color:#0563c1; text-decoration:underline"><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">https://doreljuvenile.com/nl-nl/our-brands</span></span></a><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">&nbsp;</span>voor meer informatie!</span></em><br />
+<em><span><span lang="NL" style="font-family:Barlow">Ga naar </span></span><a href="https://doreljuvenile.com/nl-nl/our-brands" style="color:#0563c1; text-decoration:underline"><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">doreljuvenile.com/nl-nl/our-brands</span></span></a><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">&nbsp;</span>voor meer informatie!</span></em><br />
 <br />
-<span style="color:#000000;"><span lang="NL" style="font-family:&quot;Barlow Light&quot;"><u><strong>Let op! Dit is een automatisch gegenereerd bericht, en kan niet worden beantwoord.</strong></u></span></span></span></span></span></p>
+<span><span lang="NL" style="font-family:Barlow Light"><u><strong>Let op! Dit is een automatisch gegenereerd bericht, en kan niet worden beantwoord.</strong></u></span></span></span></span></span></p>
 </body>
 </html>
