--- a/enversion.html
+++ b/enversion.html
@@ -1,20 +1,21 @@
-<!--EN Version 2.0-->
 <html style="overflow-y: hidden;">
 <head>
 	<title></title>
 </head>
-<body style="height: auto; min-height: auto;"><br />
+<body style="height: auto; min-height: auto;">
+<div><br />
 <span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span style="font-family:Barlow Light">Dear customer,<br />
 <br />
-Thank you for your contact!</span></span></span></span><br />
-<span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span style="font-family:Barlow Light">Our support team will analyse your question and answer you as soon as possible.</span></span></span></span><br />
+Thank you for your enquiry!</span></span></span></span><br />
+<span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span style="font-family:Barlow Light">Our support team will analyse your question and respond as soon as possible.</span></span></span></span><br />
 <br />
-<span style="line-height: 107%;"><span style="font-family:Barlow Light; font-size: 11pt;">Your message on {{{Case.CreatedDate}}},</span><font face="Calibri, sans-serif"><span style="font-size: 11pt;">&nbsp;</span></font><font face="Barlow Light"><span style="font-size: 11pt;">has </span><span style="font-size: 14.6667px;">received</span><span style="font-size: 11pt;">&nbsp;the following case number:&nbsp;{{{Case.CaseNumber}}}.</span></font><br />
-<font face="Barlow Light"><span style="font-size: 11pt;">Always keep this number, in case you have any further questions about your case.</span></font><br />
+<span style="line-height: 107%;"><span style="font-family:Barlow Light; font-size: 11pt;">Your message recieved on {{{Case.CreatedDate}}},</span></span><span style="line-height: 107%;"><font face="Barlow Light"><span style="font-size: 11pt;"> has </span><span style="font-size: 14.6667px;">been assigned</span><span style="font-size: 11pt;">the following case number:{{{Case.CaseNumber}}}.</span></font><br />
+<font face="Barlow Light"><span style="font-size: 11pt;">Please keep this number safe as you will need it if you have any further queries about your case.</span></font><br />
 <br />
-<span style="font-family:Barlow Light; font-size: 11pt;">We wish you a very pleasant day and once again thank you for choosing Dorel Juvenile!</span></span><br />
+<span style="font-family:Barlow Light; font-size: 11pt;">Thank you for choosing Dorel Juvenile!</span></span><br />
 <br />
-<em><span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span style="font-family:Barlow Light">Please visit <span style="color:#065e8b"><a href="https://doreljuvenile.com/our-brands" style="color:#0563c1; text-decoration:underline"><span style="color:#065e8b">doreljuvenile.com/our-brands</span></a> &nbsp;</span>for more information!</span></span></span></span></em><br />
+<em><span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span style="font-family:Barlow Light">Please visit <span style="color:#065e8b"><a href="https://doreljuvenile.com/our-brands" style="color:#0563c1; text-decoration:underline"><span style="color:#065e8b">doreljuvenile.com/our-brands</span></a> </span>for more information!</span></span></span></span></em><br />
 <br />
-<span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><b><u><span style="font-family:Barlow Light">Attention! This is an automatically generated message and cannot be replied to.</span></u></b></span></span></span></body>
+<span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><b><u><span style="font-family:Barlow Light">Attention! This is an automated message and cannot be replied to.</span></u></b></span></span></span></div>
+</body>
 </html>
