--- a/nlversion.html
+++ b/nlversion.html
@@ -1,23 +1,30 @@
-<!--NL Version 2.0-->
+<!DOCTYPE html>
 <html style="overflow-y: hidden;">
 <head>
 	<title></title>
+	<style>
+		.text-light {
+			font-size: 11pt;
+			font-family: Barlow Light;
+			line-height: 107%;
+		}
+		.text-italic {
+			font-style: italic;
+		}
+	</style>
 </head>
-<body style="height: auto; min-height: auto;">
-<p><br />
-<span style="font-size:11pt"><span style="line-height:107%"><span style="font-family:Calibri,sans-serif"><span><span lang="NL" style="font-family:Barlow">Beste klant,</span><br />
-<br />
-<span lang="NL" style="font-family:Barlow Light">Hartelijk dank voor uw bericht.<br />
-Ons supportteam zal uw vraag analyseren en u zo spoedig mogelijk antwoorden.<br />
-<br />
-Uw bericht op&nbsp;{{{Case.CreatedDate}}} heeft het volgende referentienummer gekregen:&nbsp;{{{Case.CaseNumber}}}.<br />
-Met onderwerp: {{{Case.Subject}}}.&nbsp;<br />
-Graag dit nummer gebruiken als u meer vragen heeft.<br />
-<br />
-We wensen u een hele fijne dag en nogmaals dank voor uw keuze voor Dorel Juvenile!</span></span><br />
-<br />
-<em><span><span lang="NL" style="font-family:Barlow">Ga naar </span></span><a href="https://doreljuvenile.com/nl-nl/our-brands" style="color:#0563c1; text-decoration:underline"><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">doreljuvenile.com/nl-nl/our-brands</span></span></a><span lang="NL" style="font-family:Barlow"><span style="color:#065e8b">&nbsp;</span>voor meer informatie!</span></em><br />
-<br />
-<span><span lang="NL" style="font-family:Barlow Light"><u><strong>Let op! Dit is een automatisch gegenereerd bericht, en kan niet worden beantwoord.</strong></u></span></span></span></span></span></p>
+<body>
+	<span class="text-light" lang="PT">Beste klant,</span><br>
+	<br>
+	<span class="text-light" lang="PT">Hartelijk dank voor uw bericht.</span><br>
+	<span class="text-light" lang="PT">Ons supportteam zal uw vraag analyseren en u zo spoedig mogelijk antwoorden.	</span><br>
+	<br>
+	<span class="text-light" lang="PT">Uw bericht op: {{{Case.CreatedDate}}} heeft het volgende referentienummer gekregen: {{{Case.CaseNumber}}}.</span><br>
+	<span class="text-light" lang="PT">Graag dit nummer gebruiken als u meer vragen heeft.</span><br>
+	<br>
+	<span class="text-light" lang="PT">We wensen u een hele fijne dag en nogmaals dank voor uw keuze voor Dorel Juvenile!</span><br>
+	<span class="text-light text-italic" lang="PT">Ga naar <a href="https://doreljuvenile.com/nl-nl/our-brands">doreljuvenile.com/nl-nl/our-brands</a> voor meer informatie!</span><br>
+	<br>
+	<span class="text-light" lang="PT"><b><u>Let op! Dit is een automatisch gegenereerd bericht, en kan niet worden beantwoord.</span></u></b>
 </body>
 </html>
