--- a/nlversion.html
+++ b/nlversion.html
@@ -14,17 +14,17 @@
 	</style>
 </head>
 <body>
-	<span class="text-light" lang="PT">Beste klant,</span><br>
+	<span class="text-light" lang="NL">Beste klant,</span><br>
 	<br>
-	<span class="text-light" lang="PT">Hartelijk dank voor uw bericht.</span><br>
-	<span class="text-light" lang="PT">Ons supportteam zal uw vraag analyseren en u zo spoedig mogelijk antwoorden.	</span><br>
+	<span class="text-light" lang="NL">Hartelijk dank voor uw bericht.</span><br>
+	<span class="text-light" lang="NL">Ons supportteam zal uw vraag analyseren en u zo spoedig mogelijk antwoorden.	</span><br>
 	<br>
-	<span class="text-light" lang="PT">Uw bericht op: {{{Case.CreatedDate}}} heeft het volgende referentienummer gekregen: {{{Case.CaseNumber}}}.</span><br>
-	<span class="text-light" lang="PT">Graag dit nummer gebruiken als u meer vragen heeft.</span><br>
+	<span class="text-light" lang="NL">Uw bericht op: {{{Case.CreatedDate}}} heeft het volgende referentienummer gekregen: {{{Case.CaseNumber}}}.</span><br>
+	<span class="text-light" lang="NL">Graag dit nummer gebruiken als u meer vragen heeft.</span><br>
 	<br>
-	<span class="text-light" lang="PT">We wensen u een hele fijne dag en nogmaals dank voor uw keuze voor Dorel Juvenile!</span><br>
-	<span class="text-light text-italic" lang="PT">Ga naar <a href="https://doreljuvenile.com/nl-nl/our-brands">doreljuvenile.com/nl-nl/our-brands</a> voor meer informatie!</span><br>
+	<span class="text-light" lang="NL">We wensen u een hele fijne dag en nogmaals dank voor uw keuze voor Dorel Juvenile!</span><br>
+	<span class="text-light text-italic" lang="NL">Ga naar <a href="https://doreljuvenile.com/nl-nl/our-brands">doreljuvenile.com/nl-nl/our-brands</a> voor meer informatie!</span><br>
 	<br>
-	<span class="text-light" lang="PT"><b><u>Let op! Dit is een automatisch gegenereerd bericht, en kan niet worden beantwoord.</span></u></b>
+	<span class="text-light" lang="NL"><b><u>Let op! Dit is een automatisch gegenereerd bericht, en kan niet worden beantwoord.</span></u></b>
 </body>
 </html>
