--- a/itversion.html
+++ b/itversion.html
@@ -14,18 +14,17 @@
 	</style>
 </head>
 <body>
-	<span class="text-light" lang="IT">Kära kund,</span><br>
+	<span class="text-light" lang="IT">Gentile cliente,</span><br>
 	<br>
-	<span class="text-light" lang="IT">Tack för att du har kontaktat oss! Vår kundtjänstavdelning kommer analysera din fråga och</span><br>
-	<span class="text-light" lang="IT">kontakta dig så fort som möjligt.</span><br>
+	<span class="text-light" lang="IT">Grazie per la tua richiesta!</span><br>
+	<span class="text-light" lang="IT">Il nostro team di assistenza analizzerà la tua richiesta e ti risponderà il prima possibile.</span><br>
 	<br>
-	<!--Hier is geen case date, omdat de vertaling niet optijd is binnengekomen-->
-	<span class="text-light" lang="IT">Ditt case-nummer är {{{Case.CaseNumber}}}.</span><br>
-	<span class="text-light" lang="IT">Notera case-numret för eventuella framtida frågor gällande ditt ärende.</span><br>
+	<span class="text-light" lang="IT">Al tuo messaggio ricevuto in data {{{Case.CreatedDate}}}, è stato assegnato il seguente numero di pratica: {{{Case.CaseNumber}}}.</span><br>
+	<span class="text-light" lang="IT">Conserva questo numero al sicuro in quanto ti servirà in caso di ulteriori domande sul tuo caso.</span><br>
 	<br>
-	<span class="text-light" lang="IT">Vi önskar dig en fantastisk dag och vill återigen tacka för att du har valt Dorel Juvenile!</span><br>
-	<!--Hier is geen website link, omdat de vertaling niet optijd is binnengekomen-->
+	<span class="text-light" lang="IT">Grazie per aver scelto Dorel Juvenile!</span><br>
+	<span class="text-light text-italic" lang="IT">Visita <a href="https://doreljuvenile.com/our-brands">doreljuvenile.com/our-brands</a> per maggiori informazioni!</span><br>
 	<br>
-	<span class="text-light" lang="IT"><b><u>Vänligen svara inte på detta mejl eftersom det är automatiskt genererat, och vi inte har möjlighet att hantera direkta svar på detta meddelande.</span></u></b>
+	<span class="text-light" lang="IT"><b><u>Attenzione! Questo è un messaggio automatico, non rispondere a questa mail.</span></u></b>
 </body>
 </html>
